# splonks-cpp

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  HYDRATION.md  README.md  add_archetypes.md  imgui.ini
assets/graphics/: annotations.yaml
assets/graphics/.span/: spec.yaml  workspace.span
assets/graphics/particles/: particles.xcf
assets/graphics/sprites/: bomb_icon.aseprite  copper_torch.aseprite  copper_torch.json  gold.aseprite  gold.json  gold_icon.aseprite  gold_icon.json  heart.aseprite  man_dead.aseprite  man_dead.json  man_neutral.aseprite  man_neutral.json  man_neutral_holding.aseprite  man_neutral_holding.json  man_running.aseprite  man_running.json  man_stunned.aseprite  man_stunned.json  man_walking.aseprite  man_walking.json  man_walking_holding.aseprite  man_walking_holding.json  no_sprite.aseprite  no_sprite.json  reticle.aseprite  reticle.json  rope_bundle.aseprite  rope_bundle.json  rope_icon.aseprite  rope_icon.json  rope_ladder_tile.aseprite  rope_unfolding.aseprite  rope_unfolding.json  torch.json  wooden_torch.aseprite  wooden_torch.json
assets/graphics/tiles/: boss.xcf  cave.xcf  ice.xcf  jungle.xcf  rope_ladder_tile.json  temple.xcf
data/: settings.cfg
docs/: README.md  asset-metadata-notes.md  contact_models.md  entity_local_hitstop_notes.md  gameplay_systems_backlog.md  hydration_2026-04-12.md  ideas.txt  physics_port_from_splonks_old.md  spelunky_physics_research.md
docs/legacy/: DEV_README.md  bugs.txt
docs/plans/: 2026_04_08.plan  body_motion_and_bounce.md  contact_behavior_migration_plan.md  contact_dispatch_plan.md  display_animation_migration_plan.md  entity_use_state_migration_plan.md  hydration_2026_04_11.md  hydration_2026_04_13_stage_border.md  ideas_list.txt  lighting_plan.md  player_behavior_genericification.md  stage_border_and_bounds_plan.md  toroidal_wrap_plan.md  worldgen_hd_extraction_plan.md
plans/: README.md  leaf_port_order.txt  literal_port_checklist.md  port_caveats.txt
plans/legacy/: z_dev_todid.md  z_dev_todo.md
scripts/: build.sh  run.sh
src/: audio.cpp  audio.hpp  buying.cpp  buying.hpp  cli.cpp  cli.hpp  contact_bookkeeping.cpp  contact_bookkeeping.hpp  controls.cpp  controls.hpp  damage_types.hpp  debug_playback.cpp  debug_playback.hpp  debug_playback_core.cpp  debug_playback_internal.hpp  debug_playback_serialization.cpp  debug_playback_ui.cpp  debug_playback_ui_common.cpp  debug_playback_ui_entities.cpp  debug_playback_ui_menu.cpp  debug_playback_ui_settings.cpp  direction.cpp  direction.hpp  draw_layer.hpp  entity.cpp  entity.hpp  entity_archetype.cpp  entity_archetype.hpp  entity_archetype_registry.cpp  entity_core_types.hpp  entity_display_states.cpp  entity_display_states.hpp  entity_display_support.hpp  entity_manager.cpp  entity_origin.hpp  entity_tool_inventory.cpp  entity_tool_inventory.hpp  frame_data.cpp  frame_data.hpp  frame_data_animator.cpp  (+77 more)
src/debug/: playback.hpp  playback_core.cpp  playback_internal.hpp  playback_recording_io.cpp  playback_serialization.cpp  playback_snapshot_state.cpp  playback_text_export.cpp  playback_ui_common.cpp  playback_ui_entities.cpp  playback_ui_menu.cpp  playback_ui_settings.cpp
src/entities/: altar.cpp  altar.hpp  arrow_trap.cpp  arrow_trap.hpp  baseball_bat.cpp  baseball_bat.hpp  basic_exit.cpp  basic_exit.hpp  bat.cpp  bat.hpp  block.cpp  block.hpp  bomb.cpp  bomb.hpp  boulder.cpp  boulder.hpp  bow.cpp  bow.hpp  box.cpp  box.hpp  breakaway_container.cpp  breakaway_container.hpp  caveman.cpp  caveman.hpp  chest.cpp  chest.hpp  common.cpp  common.hpp  common_blocking_contact.cpp  common_carry.cpp  common_collect.cpp  common_damage.cpp  common_entity_contact.cpp  common_frame.cpp  common_hang.cpp  common_physics.cpp  common_push.cpp  common_step.cpp  common_stomp.cpp  common_throw.cpp  (+78 more)
src/entities/common/: blocking_contact.cpp  carry.cpp  collect.cpp  common.hpp  contact_damage.cpp  damage.cpp  entity_contact.cpp  explosion.cpp  frame.cpp  ground_walker.cpp  ground_walker.hpp  hang.cpp  knockback.cpp  knockback.hpp  physics.cpp  push.cpp  step.cpp  stomp.cpp  throw.cpp  tile_contact.cpp  tool_use.cpp
src/entity/: archetype.cpp  archetype.hpp  archetype_registry.cpp  archetype_restore.cpp  archetype_restore.hpp  callbacks.hpp  core_types.hpp  display_states.cpp  display_states.hpp  display_support.hpp  draw_layer.hpp  manager.cpp  manager.hpp
src/menu/: lighting.cpp  lighting.hpp  postfx.cpp  postfx.hpp  settings.cpp  settings.hpp  title.cpp  title.hpp  ui.cpp  ui.hpp  video.cpp
src/particles/: dynamic_particle.cpp  dynamic_particle.hpp  particle.cpp  particle.hpp  spline_particle.cpp  spline_particle.hpp  static_particle.cpp  static_particle.hpp  system.cpp  system.hpp  ultra_dynamic_particle.cpp  ultra_dynamic_particle.hpp
src/render/: debug.cpp  debug.hpp  gameplay.cpp  gameplay.hpp  menus.hpp  postfx.cpp  postfx.hpp  render.cpp  render.hpp  stone_overlay.cpp  stone_overlay.hpp  terrain_lighting.cpp  terrain_lighting.hpp  tile_lighting.cpp  tile_lighting.hpp  tiles_and_entities.cpp  tiles_and_entities.hpp  ui.cpp  ui.hpp
src/render/menu/: common.cpp  common.hpp  lighting.cpp  settings.cpp  top_level.cpp
src/render_shaders/: render_crt_frag.hlsl  render_crt_frag.spv.h
src/shaders/: grayscale.fs  vert.fs
src/special_effects/: dynamic_effect.cpp  dynamic_effect.hpp  mod.cpp  mod.hpp  special_effect.cpp  special_effect.hpp  spline_effect.cpp  spline_effect.hpp  static_effect.cpp  static_effect.hpp  ultra_dynamic_effect.cpp  ultra_dynamic_effect.hpp
src/stage_gen/: cave.cpp  cave.hpp  hd_mines.cpp  hd_mines.hpp  mod.cpp  mod.hpp  splk_mines.cpp  splk_mines.hpp  test.cpp  test.hpp
src/systems/: controls.cpp  controls.hpp  mod.cpp  mod.hpp
src/tools/: throw_bomb.cpp  throw_bomb.hpp  throw_pot.cpp  throw_pot.hpp  throw_rope.cpp  throw_rope.hpp  tool_archetype.cpp  tool_archetype.hpp
